--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   },
   "dependencies": {
     "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^26.0.24",
     "basic-ftp": "^4.6.6",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^5.1.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
